# openapi/api.yaml
@@ -5,6 +5,22 @@ info:
 servers:
   - url: /
 paths:
+  /api/:
+    get:
+      operationId: getApiHealth
+      summary: ヘルス
+      parameters:
+        - $ref: "#/components/parameters/XClientApiVersion"
+      responses:
+        "200":
+          description: ヘルス
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/HealthResponse"
+        default:
+          $ref: "#/components/responses/Error"
+
   /api/auth/login:
     post:
       operationId: postAuthLogin
@@ -515,7 +531,7 @@ paths:
             schema:
               $ref: "#/components/schemas/AddGroupMemberRequest"
       responses:
-        "200":
+        "201":
           description: 追加したメンバー
           content:
             application/json:
@@ -575,7 +591,7 @@ paths:
             schema:
               $ref: "#/components/schemas/CreateInAppNotificationRequest"
       responses:
-        "200":
+        "201":
           description: 作成した通知
           content:
             application/json:
@@ -733,6 +749,16 @@ components:
         - astonished
         - cry
         - muscle
+
+    HealthResponse:
+      type: object
+      required:
+        - name
+      properties:
+        name:
+          type: string
+          enum:
+            - Cloudflare
 
     OkResponse:
       type: object
